Fix translations

When I removed the use of AM_GLIB_GNU_GETTEXT, I didn't realize that it
was needed for exactly one reason: to define the variable DATADIRNAME to
"share". We are using it here to define GNOMELOCALEDIR to pass to
bindtextdomain.

Let's just use standard LOCALEDIR instead.

https://bugzilla.gnome.org/show_bug.cgi?id=767913